--- a/404.md
+++ b/404.md
@@ -1,5 +1,11 @@
 ---
 layout: default
+published: true
 ---
+<h2>404 Error - page not found</h2>
 
-NOTHING HERE!
+<p>We're sorry, but the page you are looking for doesn't exist.</p>
+
+<p>You can go to the <a href="/">homepage</a></p>
+
+<p>Or try some of our latest posts:</p>
