--- a/404.md
+++ b/404.md
@@ -9,3 +9,13 @@ published: true
 <p>You can go to the <a href="/">homepage</a></p>
 
 <p>Or try some of our latest posts:</p>
+
+<ul>
+{% for apage in site.pages %}
+    {% if apage.categories contains 'messages' %}
+        {% if page.url != apage.url %}
+ <li><a href="{{ apage.url | prepend: site.baseurl }}">{{ apage.title2 }}</a></li>                                             
+        {% endif %}
+    {% endif %}
+{% endfor %}     
+</ul>
